--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -39,6 +39,10 @@ jobs:
     - name: Build with Gradle Wrapper
       run: ./gradlew build --scan
 
+    - name: Run Unit Tests
+      run: |
+        ./gradlew test --stacktrace
+        
     # NOTE: The Gradle Wrapper is the default and recommended way to run Gradle (https://docs.gradle.org/current/userguide/gradle_wrapper.html).
     # If your project does not have the Gradle Wrapper configured, you can use the following configuration to run Gradle with a specified version.
     #
