unit test  reporting

--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,10 @@
 plugins {
     id 'java'
+    id 'io.qameta.allure' version '2.11.2' // Use the latest stable version
+
 }
+// Define the version of Allure you want to use via the allureVersion property
+def allureVersion = "2.25.0"
 
 group = 'org.example'
 version = '1.0-SNAPSHOT'
@@ -8,7 +12,6 @@ version = '1.0-SNAPSHOT'
 repositories {
     mavenCentral()
 }
-
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.12.2'
     testRuntimeOnly 'org.junit.platform:junit-platform-engine:1.12.2'
@@ -20,6 +23,10 @@ dependencies {
     testImplementation 'io.cucumber:cucumber-java' // If using Java for glue code
 
     testImplementation 'org.seleniumhq.selenium:selenium-java:4.33.0'
+    // Import allure-bom to ensure correct versions of all the dependencies are used
+    testImplementation platform("io.qameta.allure:allure-bom:$allureVersion")
+    // Add necessary Allure dependencies to dependencies section
+    testImplementation "io.qameta.allure:allure-junit5"
 }
 
 configurations {
@@ -30,4 +37,5 @@ configurations {
 
 test {
     useJUnitPlatform()
+    systemProperties 'allure.results.directory': "${buildDir}/allure-results"
 }
