--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -84,6 +84,8 @@ jobs:
         # enabled this to avoid uploading sensitive information.
         # Optional. Default is 'false'
         # include-hidden-files:
+    - name: Generate Allure reports
+      run: mkdir allure_report && allure generate --clean
     # NOTE: The Gradle Wrapper is the default and recommended way to run Gradle (https://docs.gradle.org/current/userguide/gradle_wrapper.html).
     # If your project does not have the Gradle Wrapper configured, you can use the following configuration to run Gradle with a specified version.
     #
