Fix allure report

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -84,8 +84,19 @@ jobs:
         # enabled this to avoid uploading sensitive information.
         # Optional. Default is 'false'
         # include-hidden-files:
-    - name: Generate Allure reports
-      run: mkdir allure_report && allure generate --clean
+
+    - name: Allure report
+      # You may pin to the exact commit or the version.
+      # uses: afiore/action-allure-report@e43ebd6f4f4c74b07b1eb02f042902bbe6786a19
+      uses: afiore/action-allure-report@v0.1.0
+      # with:
+        # Allure test result data dir
+        # results-dir: # default is allure-results
+        # Allure report target dir
+        # report-dir: # default is allure-report
+          
+
+      
     # NOTE: The Gradle Wrapper is the default and recommended way to run Gradle (https://docs.gradle.org/current/userguide/gradle_wrapper.html).
     # If your project does not have the Gradle Wrapper configured, you can use the following configuration to run Gradle with a specified version.
     #
