--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -88,7 +88,7 @@ jobs:
     - name: Allure report
       # You may pin to the exact commit or the version.
       # uses: afiore/action-allure-report@e43ebd6f4f4c74b07b1eb02f042902bbe6786a19
-      uses: afiore/action-allure-report@v0.1.0
+      uses: QuintilianoNery/action-allure-report-V2@0.2.0
       # with:
         # Allure test result data dir
         # results-dir: # default is allure-results
