--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -85,7 +85,7 @@ jobs:
         # Optional. Default is 'false'
         # include-hidden-files:
 
-    - name: Allure report
+    - name: Generate Allure report
       # You may pin to the exact commit or the version.
       # uses: afiore/action-allure-report@e43ebd6f4f4c74b07b1eb02f042902bbe6786a19
       uses: QuintilianoNery/action-allure-report-V2@0.2.0
@@ -94,6 +94,17 @@ jobs:
         # results-dir: # default is allure-results
         # Allure report target dir
         # report-dir: # default is allure-report
+    - name: Upload Allure report
+      uses: actions/upload-artifact@v4
+      with:
+        # Name of the artifact to upload.
+        # Optional. Default is 'artifact'
+        name: Allure Reports
+    
+        # A file, directory or wildcard pattern that describes what to upload
+        # Required.
+        path: ./allure-report
+      
           
 
       
