Allure report fix

--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,17 @@ version = '1.0-SNAPSHOT'
 repositories {
     mavenCentral()
 }
+
+
+allure {
+    version = '2.24.0' // Check for latest Allure version
+    autoconfigure = true
+
+    useJUnit5 {
+        version = '2.24.0' // Allure JUnit5 adapter version
+    }
+}
+
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.12.2'
     testRuntimeOnly 'org.junit.platform:junit-platform-engine:1.12.2'
