--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -104,7 +104,7 @@ jobs:
     
         # A file, directory or wildcard pattern that describes what to upload
         # Required.
-        path: ./allure-report
+        path: ./build/reports/allure-report/allureReport
       
           
 
